// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Logo Logo 1`] = `
<div
  className="css-znsoff"
>
  <svg
    className="chakra-icon css-1nsz2z9"
    focusable={false}
    viewBox="0 0 33.787568 17.315006"
  >
    <g>
      <text
        x=".021"
        y="10.118"
      >
        YES
      </text>
      <text
        x=".042"
        y="17.251"
      >
        THEORY
      </text>
      <text
        fill="#0167ff"
        transform="rotate(90)"
        x="-.489"
        y="-27.315"
      >
        FAM
      </text>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Common/Logo Logo White 1`] = `
<div
  className="css-1ya4nun"
>
  <svg
    className="chakra-icon css-1nsz2z9"
    focusable={false}
    viewBox="0 0 33.787568 17.315006"
  >
    <g>
      <text
        x=".021"
        y="10.118"
      >
        YES
      </text>
      <text
        x=".042"
        y="17.251"
      >
        THEORY
      </text>
      <text
        fill="white"
        transform="rotate(90)"
        x="-.489"
        y="-27.315"
      >
        FAM
      </text>
    </g>
  </svg>
</div>
`;

exports[`Storyshots Common/Logo Logos 1`] = `
<div
  className="chakra-stack css-owjkmg"
>
  <div
    className="chakra-stack css-1ofz3wq"
  >
    <div
      className="css-znsoff"
    >
      <svg
        className="chakra-icon css-1nsz2z9"
        focusable={false}
        viewBox="0 0 33.787568 17.315006"
      >
        <g>
          <text
            x=".021"
            y="10.118"
          >
            YES
          </text>
          <text
            x=".042"
            y="17.251"
          >
            THEORY
          </text>
          <text
            fill="#0167ff"
            transform="rotate(90)"
            x="-.489"
            y="-27.315"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div
      className="css-1btwv0h"
    >
      <svg
        className="chakra-icon css-1nsz2z9"
        focusable={false}
        viewBox="0 0 33.787568 17.315006"
      >
        <g>
          <text
            x=".021"
            y="10.118"
          >
            YES
          </text>
          <text
            x=".042"
            y="17.251"
          >
            THEORY
          </text>
          <text
            fill="#0167ff"
            transform="rotate(90)"
            x="-.489"
            y="-27.315"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div
      className="css-1bvkrzq"
    >
      <svg
        className="chakra-icon css-1nsz2z9"
        focusable={false}
        viewBox="0 0 33.787568 17.315006"
      >
        <g>
          <text
            x=".021"
            y="10.118"
          >
            YES
          </text>
          <text
            x=".042"
            y="17.251"
          >
            THEORY
          </text>
          <text
            fill="#0167ff"
            transform="rotate(90)"
            x="-.489"
            y="-27.315"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
  </div>
  <div
    className="chakra-stack css-16qyr4m"
  >
    <div
      className="css-1ya4nun"
    >
      <svg
        className="chakra-icon css-1nsz2z9"
        focusable={false}
        viewBox="0 0 33.787568 17.315006"
      >
        <g>
          <text
            x=".021"
            y="10.118"
          >
            YES
          </text>
          <text
            x=".042"
            y="17.251"
          >
            THEORY
          </text>
          <text
            fill="white"
            transform="rotate(90)"
            x="-.489"
            y="-27.315"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div
      className="css-1qs4zf"
    >
      <svg
        className="chakra-icon css-1nsz2z9"
        focusable={false}
        viewBox="0 0 33.787568 17.315006"
      >
        <g>
          <text
            x=".021"
            y="10.118"
          >
            YES
          </text>
          <text
            x=".042"
            y="17.251"
          >
            THEORY
          </text>
          <text
            fill="white"
            transform="rotate(90)"
            x="-.489"
            y="-27.315"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
    <div
      className="css-7rn6ev"
    >
      <svg
        className="chakra-icon css-1nsz2z9"
        focusable={false}
        viewBox="0 0 33.787568 17.315006"
      >
        <g>
          <text
            x=".021"
            y="10.118"
          >
            YES
          </text>
          <text
            x=".042"
            y="17.251"
          >
            THEORY
          </text>
          <text
            fill="white"
            transform="rotate(90)"
            x="-.489"
            y="-27.315"
          >
            FAM
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
